:lipstick:  Prevent table cell expanding with overflowed content

--- a/packages/organisms/table/styles.css
+++ b/packages/organisms/table/styles.css
@@ -32,7 +32,7 @@
 
     td,
     th {
-      @apply py-3 px-6;
+      @apply py-3 px-6 overflow-hidden;
     }
 
     & thead {
